syntax = "proto3";
package cosmos.base.tendermint.v1beta1;

import "cosmos_sdk/tendermint/p2p/types.proto";

// This file contains types which are copied from
// https://github.com/celestiaorg/cosmos-sdk/blob/76bcf5af73b0a166552b64f9df0f87cc813aba76/proto/cosmos/base/tendermint/v1beta1/query.proto
// (v1.18.3-sdk-v0.46.14 tag).

// Service defines the gRPC querier service for tendermint queries.
service Service {
  // GetNodeInfo queries the current node info.
  rpc GetNodeInfo(GetNodeInfoRequest) returns (GetNodeInfoResponse);
}

// GetNodeInfoRequest is the request type for the Query/GetNodeInfo RPC method.
message GetNodeInfoRequest {}

// GetNodeInfoResponse is the response type for the Query/GetNodeInfo RPC
// method.
message GetNodeInfoResponse {
  .tendermint.p2p.DefaultNodeInfo default_node_info = 1;
  VersionInfo application_version = 2;
}

// VersionInfo is the type for the GetNodeInfoResponse message.
message VersionInfo {
  string name = 1;
  string app_name = 2;
  string version = 3;
  string git_commit = 4;
  string build_tags = 5;
  string go_version = 6;
  repeated Module build_deps = 7;
  // Since: cosmos-sdk 0.43
  string cosmos_sdk_version = 8;
}

// Module is the type for VersionInfo
message Module {
  // module path
  string path = 1;
  // module version
  string version = 2;
  // checksum
  string sum = 3;
}
